Add Pusher and Laravel Echo for real-time notifications; update Notification component to handle incoming notifications and improve header structure

--- a/.env
+++ b/.env
@@ -6,4 +6,11 @@ NEXTAUTH_SECRET=df75e80c-64ba-4bd8-936f-249cd3b866d9
 NEXT_PUBLIC_API_URL=https://api.taskercompany.com
 
 NEXT_PUBLIC_GOOGLE_MAPS_API_KEY="AIzaSyA63z41-qMxwQ0BOLiDXkfjablvH438eVE"
-    
+
+NEXT_PUBLIC_PUSHER_APP_ID=1917390
+NEXT_PUBLIC_PUSHER_APP_KEY=ce68911272e6c689efde
+NEXT_PUBLIC_PUSHER_APP_SECRET=4d8903a91e28d3a91677
+NEXT_PUBLIC_PUSHER_HOST=localhost
+NEXT_PUBLIC_PUSHER_PORT=6001
+NEXT_PUBLIC_PUSHER_SCHEME=http
+NEXT_PUBLIC_PUSHER_CLUSTER=ap2
