--- a/package.json
+++ b/package.json
@@ -64,9 +64,11 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.23",
+    "laravel-echo": "^1.19.0",
     "postcss": "^8",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.11",
+    "pusher-js": "^8.4.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
