--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
+    "react-fast-marquee": "^1.6.5",
     "react-loading-skeleton": "^3.5.0",
     "react-toastify": "^11.0.3",
     "recharts": "^2.15.1",
