--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "next": "14.2.23",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.4",
+    "nextjs-toploader": "^3.7.15",
     "nuqs": "^2.3.1",
     "react": "^18",
     "react-day-picker": "^8.10.1",
