--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "lucide-react": "^0.474.0",
     "next": "14.2.23",
     "next-auth": "^5.0.0-beta.25",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.4.4",
     "nextjs-toploader": "^3.7.15",
     "nuqs": "^2.3.1",
