--- a/src/app/manifest.json
+++ b/src/app/manifest.json
@@ -4,13 +4,17 @@
     "description": "Tasker Company Services",
     "icons": [
       {
-        "src": "icon-192x192.png",
+        "src": "/favicon.ico",
         "sizes": "192x192",
+        "type": "image/png"
+      },{
+        "src": "/favicon.ico",
+        "sizes": "512x512",
         "type": "image/png"
       }
     ],
     "start_url": "/",
     "display": "standalone",
     "theme_color": "#ffffff",
-    "background_color": "#ffffff"
+    "background_color": "#ffffff"   
   }
