--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@ducanh2912/next-pwa": "^10.2.9",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -74,6 +75,7 @@
     "prettier-plugin-tailwindcss": "^0.6.11",
     "pusher-js": "^8.4.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "webpack": "^5.97.1"
   }
 }
