Add product receipt generation feature to complaint edit form
- Integrate react-to-print library for receipt printing
- Add ProductReceipt component to complaint edit form
- Update package dependencies to include react-to-print
- Minor UI and import refinements

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.5",
     "react-loading-skeleton": "^3.5.0",
+    "react-to-print": "^3.0.5",
     "react-toastify": "^11.0.3",
     "recharts": "^2.15.1",
     "server": "^1.0.41",
