--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "next-themes": "^0.4.4",
     "nextjs-toploader": "^3.7.15",
     "nuqs": "^2.3.1",
+    "qrcode.react": "^4.2.0",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
@@ -69,6 +70,7 @@
     "@ducanh2912/next-pwa": "^10.2.9",
     "@types/file-saver": "^2.0.7",
     "@types/node": "^20",
+    "@types/qrcode.react": "^1.0.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
