--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "file-saver": "^2.0.5",
     "framer-motion": "^12.0.6",
     "html2canvas": "^1.4.1",
+    "jotai": "^2.11.3",
     "jszip": "^3.10.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.474.0",
@@ -55,6 +56,7 @@
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.5",
     "react-loading-skeleton": "^3.5.0",
+    "react-resizable-panels": "^2.1.7",
     "react-to-print": "^3.0.5",
     "react-toastify": "^11.0.3",
     "recharts": "^2.15.1",
