Enhance dashboard with dynamic attendance status and brand installation charts
- Update Attendance-status component to support dynamic data fetching and geolocation
- Modify ComplaintsByBrand chart to display more detailed installation metrics
- Add support for multiple status colors and interactive chart elements
- Update API endpoint configuration and environment settings
- Improve chart interactivity with click-to-filter functionality

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ NEXT_PUBLIC_NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=df75e80c-64ba-4bd8-936f-249cd3b866d9
 
 # API Base URL
-NEXT_PUBLIC_API_URL=https://api.taskercompany.com
+NEXT_PUBLIC_API_URL=http://127.0.0.1:8000
 
 NEXT_PUBLIC_GOOGLE_MAPS_API_KEY="AIzaSyA63z41-qMxwQ0BOLiDXkfjablvH438eVE"
 
