--- a/package.json
+++ b/package.json
@@ -9,9 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@dnd-kit/core": "^6.3.1",
-    "@dnd-kit/modifiers": "^9.0.0",
-    "@dnd-kit/sortable": "^10.0.0",
     "@googlemaps/google-maps-services-js": "^3.4.0",
     "@radix-ui/react-alert-dialog": "^1.1.5",
     "@radix-ui/react-avatar": "^1.1.2",
@@ -46,41 +43,28 @@
     "lucide-react": "^0.474.0",
     "next": "14.2.23",
     "next-auth": "^5.0.0-beta.25",
-    "next-pwa": "^5.6.0",
     "next-themes": "^0.4.4",
     "nextjs-toploader": "^3.7.15",
-    "nuqs": "^2.3.1",
-    "qrcode.react": "^4.2.0",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.5",
-    "react-loading-skeleton": "^3.5.0",
     "react-resizable-panels": "^2.1.7",
-    "react-to-print": "^3.0.5",
     "react-toastify": "^11.0.3",
     "recharts": "^2.15.1",
-    "server": "^1.0.41",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
-    "workbox-window": "^7.3.0",
-    "xlsx": "^0.18.5",
-    "zod": "^3.24.1"
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@ducanh2912/next-pwa": "^10.2.9",
     "@types/file-saver": "^2.0.7",
-    "@types/node": "^20",
-    "@types/qrcode.react": "^1.0.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.23",
     "laravel-echo": "^1.19.0",
-    "postcss": "^8",
-    "prettier": "^3.4.2",
-    "prettier-plugin-tailwindcss": "^0.6.11",
     "pusher-js": "^8.4.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
