--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "lucide-react": "^0.474.0",
     "next": "14.2.23",
     "next-auth": "^5.0.0-beta.25",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.4.4",
     "nextjs-toploader": "^3.7.15",
     "react": "^18",
@@ -58,7 +59,6 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "@ducanh2912/next-pwa": "^10.2.9",
     "@types/file-saver": "^2.0.7",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -67,7 +67,6 @@
     "laravel-echo": "^1.19.0",
     "pusher-js": "^8.4.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5",
-    "webpack": "^5.97.1"
+    "typescript": "^5"
   }
 }
