--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,21 +1,27 @@
 {
-    "name": "Tasker Company Services",
-    "short_name": "Tasker Company Services",
-    "description": "Tasker Company Services",
-    "icons": [
-      {
-        "src": "/favicon.ico",
-        "sizes": "192x192",
-        "type": "image/png"
-      },{
-        "src": "/favicon.ico",
-        "sizes": "512x512",
-        "type": "image/png"
-      }
-    ],
-    "start_url": "/",
-    "display": "standalone",
-    "theme_color": "#000000",
-    "background_color": "#ffffff",
-    "offline_enabled": true
-  }
+  "theme_color": "#8936FF",
+  "background_color": "#2EC6FE",
+  "icons": [
+    {
+      "purpose": "maskable",
+      "sizes": "512x512", 
+      "src": "icon512_maskable.png",
+      "type": "image/png"
+    },
+    {
+      "purpose": "any",
+      "sizes": "512x512",
+      "src": "icon512_rounded.png", 
+      "type": "image/png"
+    }
+  ],
+  "orientation": "any",
+  "display": "standalone",
+  "dir": "auto",
+  "lang": "en-US",
+  "name": "Tasker Company Crm",
+  "short_name": "Tasker Crm",
+  "description": "Customer Relationship Management System for Tasker Company",
+  "start_url": "/",
+  "scope": "/"
+}
