--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,17 +1,17 @@
 {
-  "theme_color": "#8936FF",
-  "background_color": "#2EC6FE",
+  "theme_color": "#fff",
+  "background_color": "#fff",
   "icons": [
     {
       "purpose": "maskable",
-      "sizes": "512x512", 
+      "sizes": "512x512",
       "src": "icon512_maskable.png",
       "type": "image/png"
     },
     {
       "purpose": "any",
       "sizes": "512x512",
-      "src": "icon512_rounded.png", 
+      "src": "icon512_rounded.png",
       "type": "image/png"
     }
   ],
