Update service type definition and complaint view with brand complaint number
- Modify ServicesType to remove unnecessary fields and add icon and color properties
- Add brand complaint number display in complaint view details
- Simplify service type structure to focus on essential attributes

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # NextAuth Configuration
-NEXT_PUBLIC_NEXTAUTH_URL=http://localhost:3000
+NEXT_PUBLIC_NEXTAUTH_URL=http://192.168.100.17:3000
 NEXTAUTH_SECRET=df75e80c-64ba-4bd8-936f-249cd3b866d9
 
 # API Base URL
