--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.7",
+    "@react-oauth/google": "^0.12.1",
     "@tanstack/react-table": "^8.20.6",
     "@types/lodash": "^4.17.15",
     "axios": "^1.7.9",
