--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "next-themes": "^0.4.4",
     "nextjs-toploader": "^3.7.15",
     "react": "^18",
+    "react-beautiful-dnd": "^13.1.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.5",
@@ -63,6 +64,7 @@
   "devDependencies": {
     "@types/file-saver": "^2.0.7",
     "@types/react": "^18",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.23",
