--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@react-oauth/google": "^0.12.1",
     "@tanstack/react-table": "^8.20.6",
     "@types/lodash": "^4.17.15",
+    "antd": "^5.25.1",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
