Update environment configuration, enhance complaint details form, and improve file preview components
- Updated .env file to switch API base URL to production server.
- Refactored ComplaintDetailsForm to utilize Ant Design components for improved layout and validation.
- Enhanced FilePreview and FilePreviewDialog components to use Ant Design's Image and Modal for better user experience and styling.
- Cleaned up imports and improved code organization across affected components.

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "cmdk": "^1.0.0",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
+    "dynamsoft-barcode-reader-bundle": "^10.5.3000",
     "file-saver": "^2.0.5",
     "framer-motion": "^12.0.6",
     "html2canvas": "^1.4.1",
