--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "next-themes": "^0.4.4",
     "nextjs-toploader": "^3.7.15",
     "nuqs": "^2.4.3",
+    "qrcode.react": "^4.2.0",
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
     "react-day-picker": "^8.10.1",
