--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "dynamsoft-barcode-reader-bundle": "^10.5.3000",
+    "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
     "framer-motion": "^12.0.6",
     "html2canvas": "^1.4.1",
