--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.7",
     "@react-oauth/google": "^0.12.1",
+    "@tanstack/react-query": "^5.83.0",
     "@tanstack/react-table": "^8.20.6",
     "@types/lodash": "^4.17.15",
     "antd": "^5.25.1",
